--- a/index.html
+++ b/index.html
@@ -521,13 +521,14 @@
                         <div class="brand-image">
                             <div class="branding">
                                 <h1 class="hero-heading">Find The UK’s BEST Fixed Rate Investments!</h1>
-                                <p class="hero-paragraph">
+                                <div class="hero-paragraph">
                                     <ul class="hero-paragraph--list">
                                         <li>Protected for up to £85,000 per applicant by the FSCS</li>
                                         <li>Exclusive higher rates that you wont see anywhere else</li>
                                         <li>Promotional rates of up to 6.75% (for a limited time only)</li>
+                                        <li>Offers end on Tuesday 20th February 2024! - Be quick!</li>
                                     </ul>
-                                </p>
+                                </div>
                             </div>
                             <img src="./assets/images/brand-image.png" alt="brand Image">
                         </div>
@@ -587,7 +588,7 @@
                                                 <span class="line"></span>
                                             </div>
                                             <div class="or-button">
-                                                <a href="https://www.moneysupermarket.com/savings/goals/?goal=SAV_EASYACCESS" class="button button-or">Show Me Regular Rates</a>
+                                                <a href="https://www.moneysupermarket.com/savings/goals/?goal=SAV_CASHISA" target="_blank" class="button button-or">Show Me Regular Rates</a>
                                             </div>
                                         </div>
                                     </div>
