--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>MoneySuperMarket</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link href="assets/css/global.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <link rel="icon" href="./assets/images/favicon.ico">
@@ -29,8 +30,8 @@
                                 <button id="cross"><img src="./assets/images/close icon.svg" alt="Close"></button>
                             </div>
                             <ul class="navbar-nav mr-auto custom-mobile-responsive" id="navbar-list">
-                                <li class="nav-item nav-list-item hover-effect">
-                                    <a class="nav-link" href="/">Motoring</a>
+                                <li class="nav-item nav-list-item hover-effect data_1" data-id="1">
+                                    <a class="nav-link" href="/">Motoring <i class="fa-solid fa-angle-down icon_arrow"></i></a>
 
                                     <div class="submenu">
                                         <div class="submenu-container">
@@ -92,8 +93,8 @@
 
 
                                 </li>
-                                <li class="nav-item nav-list-item hover-effect">
-                                    <a class="nav-link" href="/">Insurance</a>
+                                <li class="nav-item nav-list-item hover-effect data_2" data-id="2">
+                                    <a class="nav-link" href="/">Insurance <i class="fa-solid fa-angle-down icon_arrow"></i></a>
 
                                     <div class="submenu">
                                         <div class="submenu-container">
@@ -159,8 +160,8 @@
                                     </div>
 
                                 </li>
-                                <li class="nav-item nav-list-item hover-effect">
-                                    <a class="nav-link" href="/">Money</a>
+                                <li class="nav-item nav-list-item hover-effect data_3" data-id="3">
+                                    <a class="nav-link" href="/">Money <i class="fa-solid fa-angle-down icon_arrow"></i></a>
 
                                     <div class="submenu">
                                         <div class="submenu-container">
@@ -234,8 +235,8 @@
                                     </div>
 
                                 </li>
-                                <li class="nav-item nav-list-item hover-effect">
-                                    <a class="nav-link" href="/">Energy</a>
+                                <li class="nav-item nav-list-item hover-effect data_4" data-id="4">
+                                    <a class="nav-link" href="/">Energy <i class="fa-solid fa-angle-down icon_arrow"></i></a>
 
                                     <div class="submenu">
                                         <div class="submenu-container">
@@ -283,8 +284,8 @@
                                     </div>
 
                                 </li>
-                                <li class="nav-item nav-list-item hover-effect">
-                                    <a class="nav-link" href="/">Travel</a>
+                                <li class="nav-item nav-list-item hover-effect data_5" data-id="5">
+                                    <a class="nav-link" href="/">Travel <i class="fa-solid fa-angle-down icon_arrow"></i></a>
 
                                     <div class="submenu">
                                         <div class="submenu-container">
@@ -336,8 +337,8 @@
                                     </div>
 
                                 </li>
-                                <li class="nav-item nav-list-item hover-effect">
-                                    <a class="nav-link" href="/">Broadband</a>
+                                <li class="nav-item nav-list-item hover-effect data_6" data-id="6">
+                                    <a class="nav-link" href="/">Broadband <i class="fa-solid fa-angle-down icon_arrow"></i></a>
 
                                     <div class="submenu">
                                         <div class="submenu-container">
@@ -399,8 +400,8 @@
                                     </div>
 
                                 </li>
-                                <li class="nav-item nav-list-item hover-effect">
-                                    <a class="nav-link" href="/">Mobile Phones</a>
+                                <li class="nav-item nav-list-item hover-effect data_7" data-id="7">
+                                    <a class="nav-link" href="/">Mobile Phones <i class="fa-solid fa-angle-down icon_arrow"></i></a>
 
                                     <div class="submenu">
                                         <div class="submenu-container">
@@ -468,8 +469,8 @@
                                     </div>
 
                                 </li>
-                                <li class="nav-item nav-list-item hover-effect">
-                                    <a class="nav-link" href="/">Business</a>
+                                <li class="nav-item nav-list-item hover-effect data_8" data-id="8">
+                                    <a class="nav-link" href="/">Business <i class="fa-solid fa-angle-down icon_arrow"></i></a>
 
                                     <div class="submenu">
                                         <div class="submenu-container">
